<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.modifyproperty.ModifyPropertyFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_toolbarModifyProperty"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/toolbar_modifyProperty_title"
        android:theme="@style/ToolBarStyle"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_toolbarModifyProperty"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding1">

            <TextView
                android:id="@+id/textView_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/grey"
                android:text="@string/detailsText"
                android:textSize="@dimen/textSize6"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_propertyType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                app:layout_constraintTop_toBottomOf="@id/textView_details"
                app:hintTextColor="@color/colorAccent"
                app:boxStrokeColor="@color/colorAccent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView_propertyType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding1"
                    android:layout_marginTop="@dimen/margin"
                    android:hint="@string/typeHint"
                    app:layout_constraintTop_toBottomOf="@id/textInputLayout_propertyType"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout_propertyType"
                app:hintTextColor="@color/colorAccent"
                app:boxStrokeColor="@color/colorAccent"
                android:hint="@string/priceHint"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_baseline_attach_money_24"
                    app:drawableTint="@color/lightGrey"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_surface"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout_price"
                app:hintTextColor="@color/colorAccent"
                app:boxStrokeColor="@color/colorAccent"
                android:hint="@string/surfaceHint"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_roomsCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout_surface"
                app:hintTextColor="@color/colorAccent"
                app:boxStrokeColor="@color/colorAccent"
                android:hint="@string/roomsHint"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_bathroomsCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout_roomsCount"
                app:hintTextColor="@color/colorAccent"
                app:boxStrokeColor="@color/colorAccent"
                android:hint="@string/bathroomsHint"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_bedroomsCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout_bathroomsCount"
                app:hintTextColor="@color/colorAccent"
                app:boxStrokeColor="@color/colorAccent"
                android:hint="@string/bedroomsHint"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout_bedroomsCount"
                app:hintTextColor="@color/colorAccent"
                app:boxStrokeColor="@color/colorAccent"
                android:hint="@string/descriptionHint"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView_addressTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin2"
                android:textSize="@dimen/textSize4"
                android:textColor="@color/black"
                android:text="@string/addressText"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout_description"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                />

            <TextView
                android:id="@+id/textView_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:textSize="@dimen/textSize4"
                android:textColor="@color/grey"
                app:layout_constraintTop_toBottomOf="@id/textView_addressTitle"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                />

            <TextView
                android:id="@+id/textView_marketEntryDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/button_marketEntryDate"
                app:layout_constraintBottom_toBottomOf="@id/button_marketEntryDate"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize4"
                android:text="@string/marketEntryDateText"/>

            <Button
                android:id="@+id/button_marketEntryDate"
                app:layout_constraintTop_toBottomOf="@id/textView_address"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/margin"
                android:contentDescription="@string/marketEntryDate_contentDesc"
                android:text="@string/marketEntryDateButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_agent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                app:layout_constraintTop_toBottomOf="@id/button_marketEntryDate"
                app:hintTextColor="@color/colorAccent"
                app:boxStrokeColor="@color/colorAccent"
                android:hint="@string/agentHint"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView_addImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout_agent"
                app:layout_constraintEnd_toStartOf="@id/imageButton_addImageGallery"
                android:textColor="@color/grey"
                android:text="@string/mediasText"
                android:layout_marginTop="@dimen/margin"
                android:textSize="@dimen/textSize6"/>

            <ImageButton
                android:id="@+id/imageButton_addImageGallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_image_24"
                android:backgroundTint="@color/colorPrimary"
                app:tint="@color/white"
                app:layout_constraintTop_toTopOf="@id/textView_addImage"
                app:layout_constraintStart_toEndOf="@id/textView_addImage"
                app:layout_constraintEnd_toStartOf="@id/imageButton_addImageCamera"
                app:layout_constraintBottom_toBottomOf="@id/textView_addImage"/>

            <ImageButton
                android:id="@+id/imageButton_addImageCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_camera_alt_24"
                android:backgroundTint="@color/colorPrimary"
                app:tint="@color/white"
                app:layout_constraintTop_toTopOf="@id/textView_addImage"
                app:layout_constraintStart_toEndOf="@id/imageButton_addImageGallery"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/textView_addImage"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_images"
                android:layout_width="match_parent"
                android:layout_height="@dimen/addAndEditProperty_recyclerViewHeight"
                app:layout_constraintTop_toBottomOf="@id/textView_addImage"
                android:layout_marginTop="@dimen/margin"
                tools:itemCount="3"
                tools:listitem="@layout/add_property_image_item"/>

            <TextView
                android:id="@+id/textView_soldDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/button_soldDate"
                app:layout_constraintBottom_toBottomOf="@id/button_soldDate"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize4"
                android:text="@string/propertySoldText"/>

            <Button
                android:id="@+id/button_soldDate"
                app:layout_constraintTop_toBottomOf="@id/recyclerView_images"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/propertySoldTextNo"
                android:backgroundTint="@color/lightGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_modify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin3"
                android:textSize="@dimen/textSize4"
                app:layout_constraintTop_toBottomOf="@id/button_soldDate"
                android:text="@string/updateButtonText"
                android:contentDescription="@string/updateButton_contentDesc"
                android:backgroundTint="@color/colorAccent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>