<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/addImage_mainContainerPadding"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <TextView
        android:id="@+id/textView_dialogTitle"
        android:layout_width="@dimen/addImage_dialogTitleWidth"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialogTitle"
        android:textSize="@dimen/textSize5"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_imageDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_dialogTitle"
        app:hintTextColor="@color/colorAccent"
        app:boxStrokeColor="@color/colorAccent"
        android:hint="@string/imageDescription"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:maxLength="80"
            android:textColorHint="#757575" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/button_negativeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin2"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout_imageDescription"
        android:text="@string/negativeButton"
        android:backgroundTint="@color/grey"
        app:layout_constraintEnd_toStartOf="@id/button_positiveButton"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/button_positiveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/positiveButton"
        android:textColor="@color/lightBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_negativeButton"
        app:layout_constraintTop_toTopOf="@id/button_negativeButton" />


</androidx.constraintlayout.widget.ConstraintLayout>